pom updated, jar dont work properly